--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             </div>
         </div>
     </nav>
-    <div class="contant vh-100 justify-content-center d-flex overflow-hidden align-items-center ">
-        <div class="container d-flex align-items-center justify-content-between flex-wrap vh-100">
+    <div class="contant justify-content-center d-flex overflow-hidden align-items-center ">
+        <div class="container d-flex align-items-center justify-content-between flex-wrap ">
             <div class="left d-flex flex-column justify-content-center col-sm-12 col-lg-6 col-md-12   ">
                 <h1>Good food and drink choices are health</h1>
                 <p class="pargra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, natus maiores!
@@ -186,7 +186,7 @@
             </div>
         </div>
     </div>
-    <div class="customers vh-100">
+    <div class="customers ">
         <div class="container h-100 d-flex justify-content-center align-items-center  ">
             <div class="left col-sm-12 col-lg-6 d-flex justify-content-center flex-column ">
                 <h1 class="fa-3x">Our best gallery from
