--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
                 <p class="pargra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, natus maiores!
                     Culpa quam alias
                     voluptates error, ad atque qui? Ex, vero! Sit eum omnis ex illo ipsum sunt minima soluta.</p>
-                <div class="bot"> <button type="button" class="btn btn-warning m-0">Show Now</button>
+                <div class="bot mb-5 mt-4"> <button type="button" class="btn btn-warning m-0">Show Now</button>
                     <button type="button" class="btn btn-light m-0">Buy Now</button>
                     <button type="button" class="btn btn-warning rounded-circle"><i
-                            class="fas fa-chevron-right"></i></button></div>
+                            class="fas fa-chevron-right"></i></button>
+                </div>
             </div>
             <div
                 class="right col-sm-12 col-lg-6 col-md-12  d-flex align-items-start flex-column justify-content-center overflow-hidden ">
@@ -188,7 +189,7 @@
     </div>
     <div class="customers ">
         <div class="container h-100 d-flex justify-content-center align-items-center  ">
-            <div class="left col-sm-12 col-lg-6 d-flex justify-content-center flex-column ">
+            <div class="left col-sm-12 col-lg-6 d-flex justify-content-center flex-column mt-5">
                 <h1 class="fa-3x">Our best gallery from
                     customers</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et maxime quis veniam dolorum aliquam, quae
@@ -196,7 +197,8 @@
                     laborum eius labore.</p>
                 <div class="b"> <button type="button" class="btn btn-warning p-3 ">See More</button></div>
             </div>
-            <div class="right  col-sm-12 col-lg-6  d-flex justify-content-center align-items-center flex-wrap">
+            <div
+                class="right  col-sm-12 col-lg-6 col-md-12 d-flex justify-content-center align-items-center flex-wrap ">
                 <img class="m1" src="images/ff1.jpg" alt="">
                 <img class="m2" src="images/ff2.jpg" alt="">
                 <img class="m3" src="images/ff3.jpg" alt="">
